--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,24 +9,46 @@
     <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
     <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
     <!--CSS FORMA EXTERNA-->
-    <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+     <!----boots css---->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
 
-    <header class="header">
-        <img src="../imagenes/logo.jpg" alt="">
-        <h1> The Long Nails</h1>
-        <nav>
-            <nav>
-                <span> <a href="../index.html">Inicio</a></span>
-                <span><a href="./contacto.html">Contacto</a></span>
-                <span><a href="./servicios.html">Servicios</a></span>
-                <span><a href="./nosotros.html">Nosotros</a></span>
-                <span><a href="./redessociales.html"> Redes Sociales</a></span>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div>
+                    <a class="navbar-brand" href="#">
+                      <img src="../imagenes/logo.png" alt="" width="80" height="70">
+                    </a>
+                  </div>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item m-3">
+                    <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item m-3">
+                    <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                  </li>
+                  <li class="nav-item m-3">
+                    <a class="nav-link" href="./servicios.html">SERVICIOS</a>
+                  </li>
+                  <li class="nav-item m-3">
+                    <a class="nav-link" href="./nosotros.html">NOSOTROS</a>
+                  </li>
+                  <li class="nav-item m-3">
+                    <a class="nav-link" href="./redessociales.html">REDES SOCIALES</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
-            </nav>
-        </nav>
     </header>
     <main>
         <h1> Contacto</h1>
@@ -46,8 +68,8 @@
         </form>
 
     </main>
-    <footer class="footer">
-        <img src="imagenes/logo.jpg">
+    <footer class="footer border">
+        <img src="../imagenes/logo.png">
         <h4>copyright 2022 The Long Nails</h4>
         <ul>
             <li><a href="../index.html">Inicio</a></li>
@@ -62,7 +84,8 @@
         </div>
     </footer>
 
-
+<!----boot js---->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
