--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <!--SEO-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--META KEYWORDS-->
+    <meta name="keywords" content="uñas, nails, belleza">
     <title>THE LONG NAILS</title>
+    <!--description-->
+    <meta name="description" content="somos un salon de uñas">
     <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
     <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
     <!--CSS FORMA EXTERNA-->
@@ -15,7 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="body">
     <div class="container">
 
         <!--BARRA-->
@@ -45,7 +50,7 @@
 
 
             <section>
-                <h3 class="texto animate__animated animate__heartBeat animate__infinite"> Algunos de nuestros servicios </h3>
+                <h3 class="texto animate__animated animate__heartBeat"> Algunos de nuestros servicios </h3>
                 <div class="servicios">
                     <div class="card">
                         <img src="imagenes/unnnas.jpg" alt="">
