--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE LONG NAILS</title>
+    <title>nosotros THE LONG NAILS</title>
     <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
     <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
     <!--CSS FORMA EXTERNA-->
@@ -17,7 +17,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-pink">
             <div class="container-fluid">
                 <div>
                     <a class="navbar-brand" href="#">
