--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE LONG NAILS</title>
+    <title>servicios THE LONG NAILS</title>
     <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
     <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
     <!--CSS FORMA EXTERNA-->
@@ -17,7 +17,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-pink">
             <div class="container-fluid">
                 <div>
                     <a class="navbar-brand" href="#">
@@ -50,10 +50,30 @@
           </nav>
 
     </header>
-    <main>
-        <h1>Servicios</h1>
+    <main class="cuerposervicios">
+        <h1 class="texto">Servicios</h1>
+        <div class="servicios">
+          <div class="card">
+              <img src="../imagenes/unnnas.jpg" alt="">
+              <p>En nuestro salon realizamos los mejores tratamientos para manos, somos especialistas en manicura, esculpidas y nail art.</p>
+          </div>
+
+
+
+          <div class="card">
+              <img src="../imagenes/piess.jpg" alt="">
+              <p>Realizamos tambien juntos con profesionales belleza de pies, pedicuria, exfoliaciones para la piel y mucho mas. </p>
+          </div>
+
+
+
+          <div class="card">
+              <img src="../imagenes/lashes.jpg" alt="">
+              <p>Extension de pestañas pelo por pelo, 2D y volumen ruso. Todo con profesionales con mucha trayectoria laboral.</p>
+          </div>
+      </div>
     </main>
-    <footer class="footer border">
+    <footer class="footer border-green">
         <img src="../imagenes/logo.png">
         <h4>copyright 2022 The Long Nails</h4>
         <ul>
