--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -101,9 +101,9 @@
         </ul>
 
         <div>
-            <a href=""> <img src="../imagenes/fb.png"> </a>
-            <a href=""> <img src="../imagenes/ig.png"></a>
-            <a href=""> <img src="../imagenes/tw.png"></a>
+          <a href=""> <img src="../imagenes/facebook.png"> </a>
+          <a href=""> <img src="../imagenes/instagram.png"></a>
+          <a href=""> <img src="../imagenes/gorjeo.png"></a></a>
         </div>
     </footer>
 
