--- a/paginas/redessociales.html
+++ b/paginas/redessociales.html
@@ -2,77 +2,90 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>redes sociales THE LONG NAILS</title>
-    <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
-    <!--CSS FORMA EXTERNA-->
-    <link rel="stylesheet" href="../css/styles.css" />
-     <!----boots css---->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>redes sociales THE LONG NAILS</title>
+  <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
+  <!--CSS FORMA EXTERNA-->
+  <link rel="stylesheet" href="../css/styles.css" />
+  <!----boots css---->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-pink">
-            <div class="container-fluid">
-                <div>
-                    <a class="navbar-brand" href="#">
-                      <img src="../imagenes/logo.png" alt="" width="80" height="70">
-                    </a>
-                  </div>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item m-3">
-                    <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
-                  </li>
-                  <li class="nav-item m-3">
-                    <a class="nav-link" href="./contacto.html">CONTACTO</a>
-                  </li>
-                  <li class="nav-item m-3">
-                    <a class="nav-link" href="./servicios.html">SERVICIOS</a>
-                  </li>
-                  <li class="nav-item m-3">
-                    <a class="nav-link" href="./nosotros.html">NOSOTROS</a>
-                  </li>
-                  <li class="nav-item m-3">
-                    <a class="nav-link" href="./redessociales.html">REDES SOCIALES</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-
-    </header>
-    <main>
-        <h1>Redes Sociales</h1>
-
-      
-
-    </main>
-    <footer class="footer border">
-        <img src="../imagenes/logo.png">
-        <h4>copyright 2022 The Long Nails</h4>
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../paginas/contacto.html">Contacto</a></li>
-            <li><a href="../paginas/redessociales.html"> Redes Sociales</a></li>
-        </ul>
-
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-pink">
+      <div class="container-fluid">
         <div>
-            <a href=""> <img src="../imagenes/fb.png"> </a>
-            <a href=""> <img src="../imagenes/ig.png"></a>
-            <a href=""> <img src="../imagenes/tw.png"></a>
+          <a class="navbar-brand" href="#">
+            <img src="../imagenes/logo.png" alt="" width="80" height="70">
+          </a>
         </div>
-    </footer>
-    <!----boot js---->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item m-3">
+              <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item m-3">
+              <a class="nav-link" href="./contacto.html">CONTACTO</a>
+            </li>
+            <li class="nav-item m-3">
+              <a class="nav-link" href="./servicios.html">SERVICIOS</a>
+            </li>
+            <li class="nav-item m-3">
+              <a class="nav-link" href="./nosotros.html">NOSOTROS</a>
+            </li>
+            <li class="nav-item m-3">
+              <a class="nav-link" href="./redessociales.html">REDES SOCIALES</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+  </header>
+  <main>
+    <h1>Redes Sociales</h1>
+
+    <div class="container ">
+      <div class="row row-cols-2">
+        <div class="col "><a href=""> <img src="../imagenes/facebook.png" width="80px"> </a></div>
+        <div class="col "><a href=""> <img src="../imagenes/instagram.png" width="80px"></a></div>
+        <div class="col"><a href=""> <img src="../imagenes/gorjeo.png" width="80px"></a></a></div>
+        <div class="col"><a href=""> <img src="../imagenes/youtube.png" width="80px"></a></a></div>
+      </div>
+    </div>
+
+
+
+  </main>
+  <footer class="footer border">
+    <img src="../imagenes/logo.png">
+    <h4>copyright 2022 The Long Nails</h4>
+    <ul>
+      <li><a href="../index.html">Inicio</a></li>
+      <li><a href="../paginas/contacto.html">Contacto</a></li>
+      <li><a href="../paginas/redessociales.html"> Redes Sociales</a></li>
+    </ul>
+
+    <div>
+      <a href=""> <img src="../imagenes/facebook.png"> </a>
+      <a href=""> <img src="../imagenes/instagram.png"></a>
+      <a href=""> <img src="../imagenes/gorjeo.png"></a></a>
+    </div>
+  </footer>
+  <!----boot js---->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
